src/objects/Master_Weekly_Pipe_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloud_Oppty_Type_Master_wkly_Snapshot__c</fullName>
        <description>An empty test box for a Workflow rule to fill</description>
        <label>Cloud Oppty Type Master wkly Snapshot</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer_Assigned__c</fullName>
        <label>Engineer Assigned</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Completion_Date__c</fullName>
        <label>Eval Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Start_Date__c</fullName>
        <label>Eval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Snapshot_of_Month__c</fullName>
        <formula>DAY(DATEVALUE(Execution_Time__c))&lt;=7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Snapshot of Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Opportunity__c</fullName>
        <label>Forecast Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_Custom_Integration_Amount__c</fullName>
        <label>Forecasted Custom Integration Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Services_Amount__c</fullName>
        <label>Forecasted Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_TAM_Amount__c</fullName>
        <label>Forecasted TAM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Training_Amount__c</fullName>
        <label>Forecasted Training Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mo_s_Forecasted_Bookings__c</fullName>
        <formula>IF(OR(Stage__c=&quot;Closed Won&quot;, Stage__c=&quot;PO Received&quot;, Stage__c=&quot;Commit&quot;),Amount__c,
IF(Split_Owner_Team_Static__c=&quot;Global Accounts US&quot;,0,
IF(AND(NOT(OR(Stage__c=&quot;Identify&quot;, Stage__c=&quot;Pipeline&quot;, Stage__c=&quot;Closed Lost&quot;,Stage__c=&quot;Unqualified&quot;)),CONTAINS(Split_Owner_Team_Static_Group_Buckets__c,&quot;Velocity&quot;)),MIN(1000000,Amount__c)*0.5,
IF(Stage__c=&quot;Strong Upside&quot;,MIN(1000000,Amount__c)*0.75,
IF(Stage__c=&quot;Upside&quot;,MIN(1000000,Amount__c)*0.25,
0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mo&apos;s Forecasted Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Move_to_Upside_Date__c</fullName>
        <label>Move to Upside Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Date__c</fullName>
        <label>Opportunity ID Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Safe_ID__c</fullName>
        <label>Opportunity Safe ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_Safe_ID__c</fullName>
        <label>Opportunity Split Safe ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Source__c</fullName>
        <label>Origination Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Owner_Team_Static_Group_Buckets__c</fullName>
        <label>Split Owner Team (Static) Group Buckets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Owner_Team_Static__c</fullName>
        <label>Split Owner Team (Static)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Owner__c</fullName>
        <label>Split Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <label>Split Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Win__c</fullName>
        <label>Technical Win</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bookings__c</fullName>
        <description>Account Total Bookings</description>
        <label>Total Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Master Weekly Pipe Snapshot</label>
    <nameField>
        <label>MWPS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Weekly Pipe Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>